# NetWorth

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile-exempleCOMPLET  PC1.c  PC2.c  PC3.c  README.md  README.txt  TraitePaquet.h  creePriseEmission.c  exempleCOMPLET-PC1  exempleCOMPLET-PC1.c  exempleCOMPLET-PC2  exempleCOMPLET-PC2.c  exempleCOMPLET-PC3  exempleCOMPLET-PC3.c  initHOST.c  initHOST.h  initPC.c  initPC.h  main.c  main.exec  networth.exec  packetChecker.c  packetChecker.h  packets.c  packets.h  sendPacket.c  sendPacket.h
hosts/: creePriseEmission.c  creePriseReception.c  initHOST.c  initHOST.h
packets/: TraitePaquet.c  TraitePaquet.h  envoie.c  packetChecker.c  packetChecker.h  recoit.c  sendPacket.c  sendPacket.h
utils/: primitives.h  userinput.c  userinput.h
